BUGFIX: input with only whitespaces creating cards

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -57,7 +57,7 @@
 
 .edit_btn:hover{
     cursor: pointer;
-    background-color: greenyellow;
+    background-color: #b6ebfa;
 }
 
 .delete_btn:hover{
