--- a/src/components/StickyNotesWorkspace.module.css
+++ b/src/components/StickyNotesWorkspace.module.css
@@ -62,7 +62,7 @@
     border: 0;
     border-radius: 10px;
     height: 6vh;
-    width: 3.5vw;
+    width: 4vw;
     margin: 1.5vh 0;
 }
 
